--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Nick Robinson</title>
-        <link rel="icon" href="favicon.png">
+       <!-- <link rel="icon" href="favicon.png">-->
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
