--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Nick Robinson</title>
-       <!-- <link rel="icon" href="favicon.png">-->
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="banner" id="bannerTop">
-            <div id="photo"></div> 
             <div id="name">Nick Robinson</div>
         </div>
+        
+        <div>
+            <button id = "btn">Click Here</button>
+            </div>
 
     <!--NO HTML BEYOND THIS POINT -->    
     <script src="main.js"></script>    
